<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:id="@+id/elbLogo"
        app:layout_constraintBottom_toTopOf="@id/floatLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="wrap_content"
        android:src="@drawable/elb_logo"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@id/elbLogo"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="wrap_content"
        android:text="ELB Letin App"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/floatLogin"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:hint="Login"
            android:textColorHint="@color/colorAccent"
            android:inputType="text"
            android:id="@+id/username"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/floatPassword"
        android:padding="8dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/floatLogin"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColorHint="@color/colorAccent"
            android:id="@+id/password"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/floatPassword"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="8dp"
        android:text="Login"
        android:textColor="#fff"
        android:background="@color/colorPrimary"
        android:id="@+id/login"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>